<resources>
    <string name="app_name">TeamDrCD_GrainLogistics_2022</string>
    <string name="Password">Password</string>
    <string name="NewUser">New User?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="feedback">Feedback</string>
    <string name="todo">TODO</string>
    <string name="dash">-</string>
    <string name="action">SlideUp</string>
    <string name="testimage">testimage</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="title_activity_statsactivity">statsactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">back</string>
    <string name="add_tractor">Add Tractor</string>
    <string name="fields">Fields</string>
    <string name="contact">Contact</string>
    <string name="overview">Overview</string>
</resources>